<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#800080"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="32dp">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="false"
            android:baselineAlignBottom="false"
            android:src="@mipmap/u_park_logo" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"

            android:text="UPark"
            android:textColor="#E8D3A2"
            android:textSize="36dp"
            android:textStyle="bold"
            android:typeface="serif" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <EditText
        android:id="@+id/email_address_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#E8D3A2"
        android:hint="@string/enter_your_email_hint"
        android:inputType="textEmailAddress"
        android:textColor="#E8D3A2"
        android:textColorHint="#E8D3A2"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/password_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#E8D3A2"
        android:hint="@string/enter_your_password_hint"
        android:textColor="#E8D3A2"
        android:inputType="textPassword"
        android:textColorHint="#E8D3A2"
        android:textSize="24sp" />


    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_weight="0"
        android:backgroundTint="#E8D3A2"
        android:text="Sign In" />

    <Button
        android:id="@+id/btn_create_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:backgroundTint="#E8D3A2"
        android:text="@string/btn_create_acc" />


    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="32dp"
        android:background="?android:attr/listDivider" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp" />


</LinearLayout>
